--- a/app/static/index.html
+++ b/app/static/index.html
@@ -11,7 +11,8 @@
     <!--Hojas de estilos-->
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/toastr.css" rel="stylesheet" />
-    <link href="css/angular-busy.css" rel="stylesheet" />
+    <link href="css/custom-style.css" rel="stylesheet" />
+    
     <link href="datatables.min.css" rel="stylesheet" />
     <!--js-->
     <script src="js/libs/jQuery/jquery-2.1.4.min.js"></script>
