--- a/app/static/index.html
+++ b/app/static/index.html
@@ -30,7 +30,7 @@
 
 
  <ul class="nav navbar-nav navbar-right">
-    <li><a href="#">{{empleado[0].nombre}}</a></li>
+    <li><a href=""><b>Portal Referencias |</b> {{empleado[0].nombre}}</a></li>
              <!--div class="main">
                 <input type="hidden" id="lgnUser" value="[[ user.idUsuario ]]">                  
          </div-->
