--- a/app/static/index.html
+++ b/app/static/index.html
@@ -31,14 +31,13 @@
 
  <ul class="nav navbar-nav navbar-right">
     <li><a href=""><b>Portal Referencias |</b> {{empleado[0].nombre}}</a></li>
-             <!--div class="main">
-                <input type="hidden" id="lgnUser" value="[[ user.idUsuario ]]">                  
-         </div-->
     <li><a href="#"><span class="glyphicon glyphicon-user"> </span></a></li>
         <li></li>
     </ul>
 
-
+    <div class="main">
+                <input type="hidden" id="lgnUser" value="[[ user.idUsuario ]]">                  
+         </div>
 
   </div>
 </nav>
@@ -53,6 +52,7 @@
      <script src="js/libs/angular/angular-local-storage.min.js"></script>
     <!--Funciones Comunes-->
     <script src="confront.js"></script>
+    <script src="helpers.js"></script>
     <!--Librerias de aplicación angular-->
     <script src="AngularJS/registrationModule.js"></script>
     <!--librerias de componenetes-->
