--- a/app/static/referencia.html
+++ b/app/static/referencia.html
@@ -18,7 +18,7 @@
       CONCEPTO DE COBRO
     </div>
     <div style="padding: 4px 8px;">
-      Referencia de pago para documento: [[idDocumento]]
+      Referencia de pago para [[referencias.nombreDocumento]]: [[referencias.documento]]
     </div>
     <div style="background-color: #000080;color:white;padding:4px 8px;">
       <div style="display:inline-block; width:59%;">
@@ -30,21 +30,21 @@
     </div>
     <div class="">
       <div style="display:inline-block; width:48%; height:100px; padding: 4px 8px; box-sizing: border-box;">
-        Empresa: [[nombreEmpresa]]
+        Empresa: [[referencias.emp_nombre]] 
         <br/>
-        Cliente: [[nombreCliente]]
+        Cliente: [[referencias.nombreCliente]] 
 <br/>
-         Sucursal: [[nombreSucursal]]
+         Sucursal: [[referencias.suc_nombre]] 
 <br/>
-         Departamento: [[nombreDepartamento]]
+         Departamento: [[referencias.dep_nombre]] 
 <br/>
-         Documento: [[idDocumento]]
+         Documento: [[referencias.documento]] 
       </div>
       <div style="display:inline-block; width:28%;height:100px; padding: 4px 8px; box-sizing: border-box; border-left: 2px solid #000080; vertical-align:top">
-        Abono a   Documento: [[idDocumento]]
+        Abono a [[referencias.nombreDocumento]]: [[referencias.documento]] 
       </div>
       <div style="display:inline-block; width:18%;height:100px; padding: 4px 8px; box-sizing: border-box; border-left: 2px solid #000080; vertical-align:top">
-        Monto total $[[saldo]]
+        Monto total $[[referencias.importeDocumento]] 
       </div>
     </div>
   </div>
@@ -74,7 +74,7 @@
     width: 100%;
     display: block;
     margin: 6px 0;">
-        [[referencias]]      </span>
+        [[referencias.referencia]]      </span>
     </div>
   </div>
   <div>
@@ -107,7 +107,7 @@
       width: 100%;
       display: block;
       margin: 6px 0;">
-          [[referencias]] 
+          [[referencias.referencia]] 
         </span>
 
       </div>
