--- a/app/static/index.html
+++ b/app/static/index.html
@@ -12,17 +12,16 @@
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/toastr.css" rel="stylesheet" />
     <link href="css/custom-style.css" rel="stylesheet" />
-    
     <link href="datatables.min.css" rel="stylesheet" />
     <!--js-->
     <script src="js/libs/jQuery/jquery-2.1.4.min.js"></script>
     <script src="js/libs/bootstrap/bootstrap.js"></script>
     <script src="js/libs/dataTable/datatables.min.js"></script>
+    <link href="css/navBar.css" rel="stylesheet" />
 </head>
 
 <body ng-app="registrationModule" style="background:#EAEAEA">
-
-<nav class="navbar navbar-default">
+    <!-- <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
       <img alt="image"  src="/image/logoA.png" style="width:130px;"/>
@@ -43,13 +42,65 @@
 </nav>
 
     <div ng-view>
+    </div> -->
+    <div id="pnlSideNav" class="sidenav">
+        <div class="pnlSideTitleMin">GA</div>
+        <!-- <img alt="image"  src="/image/logoA.png" style="width:130px;"/> -->
+        <div id="mainnav-profile">
+            <div class="profile-wrap" id="divUserSession">
+                <div class="pad-btm">
+                </div>
+                <div class="main">
+                    <input type="hidden" id="lgnUser" value="[[ user.idUsuario ]]">
+                </div>
+  <!--               <a href="" id="aUsuarioSession" class="box-block" data-toggle="collapse" aria-expanded="true" style="font-family:  Helvetica">
+                    <span class="pull-right dropdown-toggle">
+                                                <i class="dropdown-caret"></i>
+                            </span>
+                    {{empleado[0].nombre}}
+                    <span class="mnp-desc"></span>
+                </a> -->
+                <br/>
+            </div>
+<!--             <div id="profile-nav" class="collapse list-group bg-trans">
+                <a href="#" class="list-group-item" ng-click="cerrarSession()">
+                    <i class="demo-pli-unlock icon-lg icon-fw"></i> Cerrar sesion
+                </a>
+            </div> -->
+        </div>
+        <a href="/" title="Referencias" style="font-family:Helvetica;">
+            <i class="glyphicon glyphicon-list-alt"></i>
+            <span class="menu-title">
+                        <strong>Referencias</strong>
+                      </span>
+        </a>
+    </div>
+    <div id="pnlMain">
+        <div class="panelTopBar">
+            <div class="pnlBodyBar">
+                <button type="button" class="btn btn-default" onclick="openCloseNav()"><span class="glyphicon glyphicon-menu-hamburger"></span></button>
+                <strong>PORTAL REFERENCIAS</strong>
+            </div>
+            <div class="pnlBodyBar pull-right">
+                 <ul class="nav navbar-nav navbar-right" style="margin-top: -8px; padding:0px 5px 10px"> 
+                    <li><a href="" style="color:#333333; font-family:Helvetica;"> {{empleado[0].nombre}}</a></li>
+                    <li><a href="" style="color:#333333"><span class="glyphicon glyphicon-user"> </span></a></li>
+                    <li></li>
+                </ul>
+            </div>
+            <!--div class="pnlBodyBar pull-right">
+            <button type="button" class="btn btn-default" onclick="openCloseNav()"><span class="glyphicon glyphicon-menu-hamburger"> </span> </button>
+        </div-->
+        </div>
+        <div ng-view></div>
     </div>
     <!--Interface de usuario-->
     <script src="js/libs/toastr/toastr.min.js"></script>
     <!-- Librerias Angular-->
     <script src="js/libs/angular/angular.min.js"></script>
     <script src="js/libs/angular/angular-route.min.js"></script>
-     <script src="js/libs/angular/angular-local-storage.min.js"></script>
+    <script src="js/libs/angular/angular-local-storage.min.js"></script>
+    <script src="js/libs/navBar.js"></script>
     <!--Funciones Comunes-->
     <script src="confront.js"></script>
     <script src="helpers.js"></script>
