--- a/app/static/referencia2.html
+++ b/app/static/referencia2.html
@@ -13,6 +13,7 @@
   <div style="background-color: #000080; margin:0px -30px; height:14px;">
   </div>
   <h3 style="text-align:center;">Formato de pago</h3>
+  <span style="display:block; text-align:center;font-size:10px;margin-bottom:4px;">[[leyendas[1].descripcion]]</span>
   <div style="border: 2px solid #000080; border-radius:12px;">
     <div style="background-color: #000080;color:white;padding: 4px 8px;border-radius: 10px 10px 0 0;">
       CONCEPTO DE COBRO
@@ -129,7 +130,7 @@
         <br>
         <br>
     <div class="">
-    <span style="display:block; text-align:center;font-size:10px;margin-bottom:4px;">Se puede pagar en cualquiera de estas sucursales</span>
+    <span style="display:block; text-align:center;font-size:10px;margin-bottom:4px;">[[leyendas[0].descripcion]]</span>
      <div style="text-align:center;">
       <div style="display:inline-block; width:100%;">
           <div style="display:inline-block; width:20%">
